http://www.grame.fr
====================================================
Copyright GRAME (c) 2009-2015
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR 
(ANR-08-CORD-010 - ANR-12-CORD-0009)
====================================================

----------------------------------------------------
Version 1.17
- messages list variables are exported to javascript as a string
- Carlito Regular open source font is embedded in the application ressources and used as a default font.
  see at https://fontlibrary.org/fr/font/carlito
- symbolic notation support extended with score expressions.
- new 'newData' event.
- javascript engine is shared between the application and the different scenes.
  Note that it may change a script behavior when exploiting the previous independance
  of the javascript engine environments.
- new javascript 'osname' function that gives the current operating system name
- new javascript 'osid' function that gives the current operating system as an id
- 'rootPath' message can be called without parameter to clear a scene rootPath
- log window supports the 'foreground' message
- user actions on windows are generating 'foreground' messages
- application quit when the last scene is closed (even when the log window is opened) 
- new 'lock' message supported by all objects to prevent an object deletion
- osc output buffer has been enlarged to 32768
- crash bug corrected: outgoing OSC messages are now handling buffer overflow exceptions

----------------------------------------------------
Version 1.16
- support for touch events (scene zoom is desactived due to a conflict with touch events)
- new radial signal representation
- httpd object is visible as a qrcode giving the server url
- httpd object is now part of the library (not a plugin any more)
- frameless and fullscreen mode are now exclusive at model level