@@ -32,6 +32,8 @@ const char* kabsolutexy_GetSetMethod= "absolutexy";		// Get Set
 const char* kaccept_GetSetMethod	= "accept";			// Get Set
 const char* kalias_GetSetMethod		= "alias";			// Get Set
 const char* kalpha_GetSetMethod		= "alpha";			// Get Set
+const char* kanimate_GetSetMethod	= "animate";		// Get Set
+const char* kanimated_GetMethod		= "animated";		// Get
 const char* kangle_GetSetMethod		= "angle";			// Get Set
 const char* karrows_GetSetMethod	= "arrows";			// Get Set
 const char* kautoVoicesColoration_GetSetMethod = "autoVoicesColoration"; // Get Set
