@@ -33,6 +33,8 @@ extern const char* kabsolutexy_GetSetMethod;
 extern const char* kaccept_GetSetMethod;
 extern const char* kalias_GetSetMethod;
 extern const char* kalpha_GetSetMethod;
+extern const char* kanimate_GetSetMethod;
+extern const char* kanimated_GetMethod;
 extern const char* kangle_GetSetMethod;
 extern const char* karrows_GetSetMethod;
 extern const char* kautoVoicesColoration_GetSetMethod;
